# createstructure.github.io

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  Privacy-Policy.md  README.md  createstructure.github.io.drawio  how-to-contribute.md  how-to-create-your-own-template.md  how-to-use.md  install.sh  requirements.in  setup.py  subscription-to-the-service.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: on-push.yml  on-release.yml  pypi-publish.yml  pypi-test.yml  python-publish.yml  test.yml  testInstallations.yml  upgrade-documentation.yml
choco/: ReadMe.md  createstructure.nuspec
choco/tools/: LICENSE.txt  VERIFICATION.txt  chocolatelyUpgrade.ps1  chocolateybeforemodify.ps1  chocolateyinstall.ps1  chocolateyuninstall.ps1  createstructure-setup.c  createstructure.c  createstructure.glb
core/: .core.swp  .manager.cpp.swp  Dockerfile  core.cpp  manager  manager.cpp  manager.sh
core/libraries/: .createstructure_upload.hpp.swp  createstructure.hpp  createstructure_changes.hpp  createstructure_chooseTemplate.hpp  createstructure_download.hpp  (+11 more)
create_structure/: __init__.py
createstructure/: __init__.py
debian/: CMakeLists.txt  Makefile  changelog  createstructure  createstructure.1  createstructure.c  package.yaml  requirements.in
docs/: CODE_OF_CONDUCT.md  PrivacyPolicy.md  README.md
requirements/: requirements.txt
snap/: CMakeLists.txt  createstructure.c  snapcraft.yaml  snapcraft.yaml 
snap-bin/: CMakeLists.txt  createstructure.c
(+17 files in other folders)
